# archilog

Lyonnet_Nathan/archilog-0.1/: .pdm-python  PKG-INFO  data.db  entries.csv  pyproject.toml
Lyonnet_Nathan/archilog-0.1/src/archilog/: __init__.py  app.py  cli.py  forms.py  services.py
Lyonnet_Nathan/archilog-0.1/src/archilog/static/: styles.css
Lyonnet_Nathan/archilog-0.1/src/archilog/views/: __init__.py  api.py  error_handler.py  routes.py
Lyonnet_Nathan/archilog-0.1/src/archilog/views/templates/: 404.html  add_entry.html  edit_entry.html  home.html
archilog-0.1/: PKG-INFO  pyproject.toml
archilog-0.1/src/archilog/: models.py
archilog-0.1/src/archilog/views/: __init__.py  api.py
archilog-0.1/src/archilog/views/static/: styles.css
archilog-0.1/src/archilog/views/templates/: edit_entry.html  home.html
