[project]
name = "archilog"
version = "0.1"
description = "A simple project for educational purpose."
readme = "README.md"
dependencies = [
    "click>=8.1.7",
    "sqlalchemy>=2.0.38",
    "tabulate>=0.9.0",
    "flask>=3.1.0",
    "flask-wtf>=1.2.2",
    "flask-httpauth>=4.8.0",
    "spectree>=1.4.5",
    "pydantic>=2.11.3",
    "wtforms>=3.2.1",
    "httpauth>=0.4.1",
]
requires-python = ">=3.10"

[project.license]
text = "MIT"

[project.scripts]
archilog = "archilog.views.cli:cli"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "flask --app archilog.views --debug run"

[tool.pdm.scripts._]
env_file = "dev.env"
